Homework | task 2 v3 (исправил замечания)