@@ -1,10 +1,9 @@
-import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
 
 public class Main {
     public static void main(String[] args) {
-        List<Book> books = Arrays.asList(
+        List<Book> books = List.of(
                 new Book("Java Basics", 1999, 300),
                 new Book("Advanced Java", 2005, 450),
                 new Book("Design Patterns", 2002, 500),
@@ -17,14 +16,12 @@ public class Main {
                 new Book("Refactoring", 2004, 380)
         );
 
-
-        List<Student> students = Arrays.asList(
+        List<Student> students = List.of(
                 new Student("Ivan", books.subList(0, 5)),
                 new Student("Maria", books.subList(5, 10)),
-                new Student("Alex", Arrays.asList(books.get(0), books.get(2), books.get(4), books.get(6), books.get(8))),
-                new Student("Elena", Arrays.asList(books.get(1), books.get(3), books.get(5), books.get(7), books.get(9)))
+                new Student("Alex", List.of(books.get(0), books.get(2), books.get(4), books.get(6), books.get(8))),
+                new Student("Elena", List.of(books.get(1), books.get(3), books.get(5), books.get(7), books.get(9)))
         );
-
 
         students.stream()
                 .peek(System.out::println)
@@ -39,6 +36,5 @@ public class Main {
                         year -> System.out.println("Найден год выпуска: " + year),
                         () -> System.out.println("Книга отсутствует")
                 );
-
     }
 }
